# hwang-post-training

./: README.md  pyproject.toml  setup.py
config/: example.yaml
gemma27_rl/: .gitignore  README.md  SPEC.MD  pyproject.toml  requirements.txt
gemma27_rl/configs/: train_27b_8gpu_3p3r1m1x.yaml  train_toy.yaml  train_wmt24pp_enko_toy.yaml
gemma27_rl/configs/gemma27_rl_outputs/grpo-wmt24pp-enko-gemma3-4b-it-toy2/: resolved_config.yaml  train_log.jsonl
gemma27_rl/configs/gemma27_rl_outputs/grpo-wmt24pp-enko-gemma3-4b-it-toy2-all/: train_log.jsonl
gemma27_rl/configs/gemma27_rl_outputs/grpo-wmt24pp-enko-gemma3-4b-it-toy2-mqm/: train_log.jsonl
gemma27_rl/configs/qwen35_mqm/: README.md  train_wmt24pp_enko_qwen35_27b_mqm_dev4gpu.yaml  train_wmt24pp_enko_qwen35_27b_mqm_scale8gpu.yaml
gemma27_rl/gemma27_rl/: __init__.py  advantage.py  cli.py  config.py  data.py  eval.py  grpo.py  metricx_model.py  prompting.py  rewards.py  rollout.py  scorer_worker.py  trainer.py  types.py  utils.py
gemma27_rl/scripts/: setup_split_uv_envs.sh
gemma27_rl/tests/: test_advantage_and_grpo.py  test_data_loader.py  test_metricx.py  test_mqm.py  test_offsets_and_spans.py  test_utils.py
gemma27b_sft/: README.md  pyproject.toml  requirements.txt
gemma27b_sft/configs/: deepspeed_zero3_8xh100.json  train_8xh100_deepspeed.yaml  train_8xh100_fsdp.yaml  train_example.yaml
gemma27b_sft/gemma27b_sft/: __init__.py  cli.py  cli_trl.py  config.py  data.py
gemma27b_sft/scripts/: eval_xcomet.py  prepare_wmt24pp_eval.py  sample_infer.sh
qwen3.5-35b-a3b/: README.md  pyproject.toml
qwen3.5-35b-a3b/configs/: gemma3-4b-it.yaml  train_toy_gspo.yaml
qwen3.5-35b-a3b/qwen3.5-35b-a3b/: advantage.py  cli.py  config.py  grpo.py  prompting.py  rewards.py  rollout.py  trainer.py  types.py  utils.py
qwen3.5-35b-a3b/tests/: conftest.py  test_advantage_and_grpo.py  test_config.py  test_data_loader.py  test_distributed.py  test_metricx.py  test_offsets_and_spans.py  test_utils.py
synth_parallel/: bucketing.py  caches.py  cli.py  config.py  filters.py  logging_utils.py  metricx.py  metricx_worker.py  pipeline.py  prompts.py  teacher.py
tests/: test_bucketing.py  test_caches.py  test_config.py  test_filters.py  test_metricx_env.py
