[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synth-parallel"
version = "0.1.0"
description = "TranslateGemma-style synthetic parallel data pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Codex"}]
dependencies = [
  "datasets>=2.19.0,<3.0.0",
  "openai>=1.40.0",
  "PyYAML>=6.0.1",
  "tqdm>=4.66.0",
  "typing-extensions>=4.10.0",
]

[project.optional-dependencies]
metricx = [
  "metricx24",
]
test = [
  "pytest>=8.0.0",
]

[project.scripts]
synth_parallel = "synth_parallel.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
